# code-review-agent

./: .env.example  .gitlab-ci.yml  CLAUDE.md  READ.md  README.md  audit.db  audit.db-shm  audit.db-wal  main.py  pyproject.toml  requirements.txt  review.py
.github/workflows/: pr-review.yml  sentinel.yml
agent/: chunker.py  enricher.py  git_meta.py  http_client.py  parser.py  report.py  reviewer.py  store.py
agent/providers/: anthropic_provider.py  base.py  factory.py  gemini_provider.py  groq_provider.py
bot/: commenter.py  formatter.py
examples/gitlab-app-repo/: .gitlab-ci.yml
scripts/: post_gitlab_mr_note.py
ui/: app.py
